# cyber-department-gis

./: .gitignore  README.md
pipeline/: .env.example  README.md  pyproject.toml
pipeline/notebooks/: compression_algorithms.ipynb  ee_test.ipynb
pipeline/src/: compression_algorithms.ipynb  main.py
pipeline/src/common/: config.py
pipeline/src/parsing/: constants.py  services.py  tasks.py
